--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -113,11 +113,11 @@ jobs:
                 uses: actions/cache@v4
                 with:
                     path: box2d-build
-                    key: ${{ matrix.target }}-${{ needs.detect-tag.outputs.ref }}
+                    key: ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_ref }}
                     restore-keys: |
-                        ${{ matrix.target }}-${{ needs.detect-tag.outputs.ref }}
+                        ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_ref }}
 
-            -   name: "Clone Box2D ${{ needs.detect-tag.outputs.ref }}"
+            -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_ref }}"
                 if: steps.cache.outputs.cache-hit != 'true'
                 run: |
                     git clone https://github.com/${{ env.BOX2D_REPO }} box2d-src
