Added stupidly necessary purge step to delete the _work dir contents on self-hosted runners

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -108,6 +108,11 @@ jobs:
             cancel-in-progress: false
 
         steps:
+            -   id: purge
+                name: Move previous run to /dev/null for safekeeping 
+                run: |
+                    rm -rf ./* 
+            
             -   id: cache
                 name: Restore native build cache
                 uses: actions/cache@v4
