--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -192,9 +192,9 @@ jobs:
                     retention-days: 7
                     compression-level: '0'
                     if-no-files-found: 'error'
-                    
-    publish-bindings:
-        name: Build & publish C# bindings
+    
+    run-tests:
+        name: Test C# bindings
         needs: [ detect-tag, build-box2d ]
         runs-on: [self-hosted, Linux, X64]
         permissions:
@@ -232,33 +232,48 @@ jobs:
             -   name: Run UnitTests (net9.0)
                 run: dotnet test src/UnitTests --configuration Debug --framework net9.0 --no-build --logger trx --results-directory TestResults
 
+    publish-bindings:
+        name: Test C# bindings
+        needs: [ detect-tag, build-box2d, run-tests ]
+        if: ${{ github.event_name != 'pull_request' &&
+            !startsWith(github.ref_name, 'codex/') }}
+        runs-on: [self-hosted, Linux, X64]
+        steps:
+            -   uses: actions/checkout@v4
+
+            -   name: "Download native libs"
+                uses: actions/download-artifact@v4
+                with:
+                    path: src/Box2DBindings/native
+                    pattern: "*"
+
             -   name: "Pack NuGet package"
                 run: |
                     dotnet pack src/Box2DBindings \
                       -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
                       -c Release
-
-            -   name: "Push to NuGet"
-                if: ${{ github.event_name != 'pull_request' && !startsWith(github.ref, 'refs/tags/codex') }}
-                env:
-                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-                run: |
-                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
-                    --api-key "$NUGET_API_KEY" \
-                    --source "$NUGET_FEED"
-
-            -   name: Generate Doxygen Documentation
-                if: github.ref == 'refs/heads/main'
-                run: doxygen
-            
-            -   name: Upload artefact
-                if: github.ref == 'refs/heads/main'
-                uses: actions/upload-pages-artifact@v3
-                with:
-                    name: github-pages
-                    path: docs/html
-                    retention-days: 7
-    
-            -   name: Deploy to GitHub Pages
-                if: github.ref == 'refs/heads/main'
-                uses: actions/deploy-pages@v4
+#
+#            -   name: "Push to NuGet"
+#                if: ${{ github.event_name != 'pull_request' && !contains(github.ref_name, 'codex') }}
+#                env:
+#                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+#                run: |
+#                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
+#                    --api-key "$NUGET_API_KEY" \
+#                    --source "$NUGET_FEED"
+#
+#            -   name: Generate Doxygen Documentation
+#                if: github.ref == 'refs/heads/main'
+#                run: doxygen
+#            
+#            -   name: Upload artefact
+#                if: github.ref == 'refs/heads/main'
+#                uses: actions/upload-pages-artifact@v3
+#                with:
+#                    name: github-pages
+#                    path: docs/html
+#                    retention-days: 7
+#    
+#            -   name: Deploy to GitHub Pages
+#                if: github.ref == 'refs/heads/main'
+#                uses: actions/deploy-pages@v4
