--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,9 +40,122 @@ jobs:
                     fi
                     echo "value=$version" >> "$GITHUB_OUTPUT"
 
-    build-box2d:
+    build-box2d-linux-x64:
         name: Build / retrieve Box2D native libs
         needs: detect-tag
+        if: github.ref == 'refs/heads/main'
+        strategy:
+            matrix:
+                include:
+                    # Linux x64
+                    -   target: linux-x64
+                        runs_on: [self-hosted, Linux, X64]
+                        cmake_flags: >
+                            -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-O3 -march=native -Wno-error=maybe-uninitialized"
+        runs-on: ${{ matrix.runs_on }}
+        
+        concurrency:
+            group: box2d-${{ matrix.target }}
+            cancel-in-progress: false
+
+        steps:
+            -   uses: actions/checkout@v4
+
+            -   id: cache
+                name: Restore native build cache
+                uses: actions/cache@v4
+                with:
+                    path: box2d-build
+                    key: ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_tag }}
+                    restore-keys: |
+                        ${{ matrix.target }}-
+
+            -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_tag }}"
+                if: steps.cache.outputs.cache-hit != 'true'
+                run: git clone --depth 1 --branch "${{ needs.detect-tag.outputs.box2d_tag }}" https://github.com/${{ env.BOX2D_REPO }} box2d-src
+
+            -   name: "Configure & compile Box2D"
+                if: steps.cache.outputs.cache-hit != 'true'
+                run: |
+                    cmake -S box2d-src -B box2d-build ${{ matrix.cmake_flags }}
+                    cmake --build box2d-build --config Release --parallel
+
+            -   name: Prepare artefact directory
+                shell: bash
+                run: |
+                    mkdir -p artefact/
+                    if [ -f box2d-build/bin/libbox2d.so ]; then
+                      cp box2d-build/bin/libbox2d.so artefact/
+                    fi
+                    if [ -f box2d-build/bin/libbox2d.dylib ]; then
+                      cp box2d-build/bin/libbox2d.dylib artefact/
+                    fi
+                    if [ -f box2d-build/bin/libbox2d.dll ]; then
+                      cp box2d-build/bin/libbox2d.dll artefact/
+                    fi
+
+            -   name: "Fail if artefact directory is empty"
+                shell: bash
+                run: |
+                    if [ -z "$(ls -A artefact/)" ]; then
+                      echo "Artefact directory is empty, aborting."
+                      tree box2d-build/bin
+                      exit 1
+                    fi
+
+            -   name: objdump for sanity
+                if: ${{ matrix.target != 'win-arm64' }}
+                run: |
+                    if [ -f box2d-build/bin/libbox2d.so ]; then
+                      objdump -f artefact/libbox2d.so
+                    fi
+                    if [ -f box2d-build/bin/libbox2d.dll ]; then
+                      objdump -f artefact/libbox2d.dll
+                    fi                   
+
+            -   name: Strip release artifacts if not 'linux-arm64' or "win-arm64"
+                if: ${{ matrix.target != 'linux-arm64' && matrix.target != 'win-arm64' }}
+                run: |
+                    if [[ -f artefact/libbox2d.so ]]; then
+                      strip artefact/libbox2d.so
+                    elif [[ -f artefact/libbox2d.dylib ]]; then
+                      strip -x artefact/libbox2d.dylib
+                    elif [[ -f artefact/libbox2d.dll ]]; then
+                      strip artefact/libbox2d.dll
+                    fi
+
+            -   name: UPX pack release artifacts if not 'win-arm64'
+                if: ${{ matrix.target != 'win-arm64' }}
+                run: |
+                    if [[ -f artefact/libbox2d.so ]]; then
+                      upx artefact/libbox2d.so
+                    elif [[ -f artefact/libbox2d.dll ]]; then
+                      upx artefact/libbox2d.dll
+                    fi
+
+            -   name: extra objdump for extra sanity
+                if: ${{ matrix.target != 'win-arm64' }}
+                run: |
+                    if [ -f box2d-build/bin/libbox2d.so ]; then
+                      objdump -f artefact/libbox2d.so
+                    fi
+                    if [ -f box2d-build/bin/libbox2d.dll ]; then
+                      objdump -f artefact/libbox2d.dll
+                    fi
+
+            -   name: Upload artefacts
+                uses: actions/upload-artifact@v4
+                with:
+                    name: ${{ matrix.target }}
+                    path: artefact/
+                    retention-days: 7
+                    compression-level: '0'
+                    if-no-files-found: 'error'
+
+    build-box2d-main:
+        name: Build / retrieve Box2D native libs
+        needs: detect-tag
+        if: github.ref == 'refs/heads/main'
         strategy:
             matrix:
                 include:
@@ -55,54 +168,46 @@ jobs:
                     # Linux x86 (cross‑compile)
                     -   target: linux-x86
                         runs_on: [self-hosted, Linux, X64]
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-O3 -m32 -msse2 -mstackrealign -march=i686 -Wno-error=maybe-uninitialized" -DCMAKE_SHARED_LINKER_FLAGS="-Wl,--hash-style=sysv"
 
                     # Linux ARM64
                     -   target: linux-arm64
                         runs_on: [self-hosted, Linux, X64]
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS="-O3 -Wno-error=maybe-uninitialized" 
 
                     # Windows x64
                     -   target: win-x64
                         runs_on: [self-hosted, Linux, X64]
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86_64 -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3 -march=native"
 
                     # Windows x86
                     -   target: win-x86
                         runs_on: [self-hosted, Linux, X64]
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=x86 -DCMAKE_C_COMPILER=i686-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=i686-w64-mingw32-g++ -DCMAKE_C_FLAGS="-O3 -m32 -msse -mstackrealign -march=i686" -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF
 
                     # Windows ARM64
                     -   target: win-arm64
                         runs_on: [self-hosted, Linux, X64]
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=ARM64 -DCMAKE_C_COMPILER=aarch64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=aarch64-w64-mingw32-g++ -DBUILD_SHARED_LIBS=ON -DBOX2D_SAMPLES=OFF -DCMAKE_C_FLAGS_RELEASE="-O3"
 
                     # macOS x64
                     -   target: osx-x64
                         runs_on: macos-latest
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DCMAKE_OSX_ARCHITECTURES=x86_64 -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -march=x86_64"
 
                     # macOS ARM64
                     -   target: osx-arm64
                         runs_on: macos-latest
-                        if: github.ref == 'refs/heads/main'
                         cmake_flags: >
                             -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS_RELEASE="-O3 -march=native"
         runs-on: ${{ matrix.runs_on }}
-        if: ${{ matrix.if }}
-
+        
         concurrency:
             group: box2d-${{ matrix.target }}
             cancel-in-progress: false
@@ -203,7 +308,7 @@ jobs:
     
     run-tests:
         name: Test C# bindings
-        needs: [ detect-tag, build-box2d ]
+        needs: [ detect-tag, build-box2d-linux-x64 ]
         runs-on: [self-hosted, Linux, X64]
         permissions:
             id-token: write
