--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,10 +77,13 @@ jobs:
                     restore-keys: |
                         ${{ matrix.target }}-${{ needs.detect-tag.outputs.box2d_tag }}
 
-            -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_tag }}"
+            -   name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_ref }}"
                 if: steps.cache.outputs.cache-hit != 'true'
-                run: git clone --depth 1 --branch "${{ needs.detect-tag.outputs.box2d_tag }}" https://github.com/${{ env.BOX2D_REPO }} box2d-src
-
+                run: |
+                    git clone https://github.com/${{ env.BOX2D_REPO }} box2d-src
+                    cd box2d-src
+                    git checkout ${{ needs.detect-tag.outputs.box2d_ref }}
+                    
             -   name: "Configure & compile Box2D"
                 if: steps.cache.outputs.cache-hit != 'true'
                 run: |
