--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -347,7 +347,11 @@ jobs:
                       exit 1
                     fi
                     cp "$lib" src/UnitTests/bin/Debug/net8.0/
+                    echo "-- net 8.0 --"
+                    ls src/UnitTests/bin/Debug/net8.0/
                     cp "$lib" src/UnitTests/bin/Debug/net9.0/
+                    echo "-- net 9.0 --"
+                    ls src/UnitTests/bin/Debug/net9.0/
 
             -   name: Run UnitTests (net8.0)
                 run: dotnet test src/UnitTests --configuration Debug --framework net8.0 --no-build --logger trx --results-directory TestResults
@@ -376,33 +380,33 @@ jobs:
             -   name: Deploy to GitHub Pages
                 uses: actions/deploy-pages@v4
     
-    publish-bindings:
-        name: Publish NuGet package
-        needs: [ run-tests, build-box2d-main ]
-        if: ${{ github.event_name != 'pull_request' &&
-            !startsWith(github.ref_name, 'codex/') }}
-        runs-on: [self-hosted, Linux, X64]
-        steps:
-            -   uses: actions/checkout@v4
-
-            -   name: "Download native libs"
-                uses: actions/download-artifact@v4
-                with:
-                    path: src/Box2DBindings/native
-                    pattern: "*"
-
-            -   name: "Pack NuGet package"
-                run: |
-                    dotnet pack src/Box2DBindings \
-                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
-                      -c Release
+#    publish-bindings:
+#        name: Publish NuGet package
+#        needs: [ run-tests, build-box2d-main ]
+#        if: ${{ github.event_name != 'pull_request' &&
+#            !startsWith(github.ref_name, 'codex/') }}
+#        runs-on: [self-hosted, Linux, X64]
+#        steps:
+#            -   uses: actions/checkout@v4
 #
-            -   name: "Push to NuGet"
-                if: ${{ github.event_name != 'pull_request' && !contains(github.ref_name, 'codex') }}
-                env:
-                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-                run: |
-                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
-                    --api-key "$NUGET_API_KEY" \
-                    --source "$NUGET_FEED"
+#            -   name: "Download native libs"
+#                uses: actions/download-artifact@v4
+#                with:
+#                    path: src/Box2DBindings/native
+#                    pattern: "*"
+#
+#            -   name: "Pack NuGet package"
+#                run: |
+#                    dotnet pack src/Box2DBindings \
+#                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
+#                      -c Release
+##
+#            -   name: "Push to NuGet"
+#                if: ${{ github.event_name != 'pull_request' && !contains(github.ref_name, 'codex') }}
+#                env:
+#                    NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+#                run: |
+#                  dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
+#                    --api-key "$NUGET_API_KEY" \
+#                    --source "$NUGET_FEED"
 
