--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -322,26 +322,27 @@ jobs:
                     path: src/Box2DBindings/native
                     pattern: "*"
 
-            -   name: "Pack NuGet package"
+            -   name: Build UnitTests project
                 run: |
-                    dotnet build src/Box2DBindings \
-                      -c Release \
-                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
-                      -p:PackageVersion=${{ needs.detect-tag.outputs.pkg_ver }} \
+                    dotnet build src/UnitTests --configuration Debug --framework net9.0
+
+            -   name: Copy Linux shared library to UnitTests output
+                run: |
+                    cp src/Box2DBindings/native/linux-x64/libbox2d.so src/UnitTests/bin/Debug/net9.0/
+
+            -   name: Run UnitTests (net9.0)
+                run: dotnet test src/UnitTests --configuration Debug --framework net9.0 --no-build --logger trx --results-directory TestResults
 
             -   name: "Pack NuGet package"
                 run: |
                     dotnet pack src/Box2DBindings \
-                      -c Release \
                       -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
-                      -p:PackageVersion=${{ needs.detect-tag.outputs.pkg_ver }} \
+                      -c Release
 
             -   name: "Push to NuGet"
-                if: ${{ github.event_name != 'pull_request' && !contains(github.ref_name, 'codex') }}
                 env:
                     NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
                 run: |
                     dotnet nuget push src/Box2DBindings/bin/Release/*.nupkg \
                       --api-key "$NUGET_API_KEY" \
                       --source "$NUGET_FEED"
-
