--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,6 +47,7 @@ jobs:
                       version="$ts-$safe_branch"
                     fi
                     echo "value=$version" >> "$GITHUB_OUTPUT"
+                    echo "Computed version: $version"
 
     build-box2d-linux-x64:
         name: Build / retrieve Box2D native libs (Build & Test)
@@ -321,17 +322,6 @@ jobs:
                 with:
                     path: src/Box2DBindings/native
                     pattern: "*"
-
-            -   name: Build UnitTests project
-                run: |
-                    dotnet build src/UnitTests --configuration Debug --framework net9.0
-
-            -   name: Copy Linux shared library to UnitTests output
-                run: |
-                    cp src/Box2DBindings/native/linux-x64/libbox2d.so src/UnitTests/bin/Debug/net9.0/
-
-            -   name: Run UnitTests (net9.0)
-                run: dotnet test src/UnitTests --configuration Debug --framework net9.0 --no-build --logger trx --results-directory TestResults
 
             -   name: "Pack NuGet package"
                 run: |
